--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <color name="transparent">#00000000</color>
     <color name="bottom_bg">#ffa6dbe4</color>
     <color name="bottom_bg_while">#ffffffff</color>
+    <color name="main_fragment_bg_while">#ffd3d3d3</color>
 
 </resources>
