--- a/app/src/main/res/layout/fragment_main_listadpter.xml
+++ b/app/src/main/res/layout/fragment_main_listadpter.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingTop="@dimen/activity_vertical_margin_s"
+    android:paddingBottom="@dimen/activity_vertical_margin_s"
     android:background="@color/main_fragment_bg_while">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/item_middle_select_round"
-        android:textSize="20dip"
+        android:textSize="17dip"
         android:paddingLeft="20dip"
         android:paddingRight="20dip"
         android:paddingTop="10dip"
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:background="@color/transparent"
-        android:textSize="16dip"/>
+        android:layout_marginRight="5dip"
+        android:textSize="14dip"/>
 
 </RelativeLayout>
