--- a/app/src/main/res/layout/fragment_main_listadpter.xml
+++ b/app/src/main/res/layout/fragment_main_listadpter.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin_s"
     android:paddingBottom="@dimen/activity_vertical_margin_s"
     android:background="@color/main_fragment_bg_while">
 
@@ -14,20 +13,35 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/item_middle_select_round"
+        android:textIsSelectable="true"
         android:textSize="17dip"
         android:paddingLeft="20dip"
-        android:paddingRight="20dip"
-        android:paddingTop="10dip"
-        android:paddingBottom="10dip"/>
-    <TextView
-        android:id="@+id/list_time_tv"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="20dip"/>
+    <RelativeLayout
         android:layout_below="@+id/list_tv"
-        android:layout_marginBottom="10dip"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:background="@color/transparent"
-        android:layout_marginRight="5dip"
-        android:textSize="14dip"/>
+        android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/list_item_collection_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/uncollection_img"
+            android:layout_marginLeft="10dip"
+            android:layout_centerVertical="true"
+            />
+
+        <TextView
+            android:id="@+id/list_time_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@color/transparent"
+            android:layout_marginRight="8dip"
+            android:textSize="14dip"
+            />
+    </RelativeLayout>
 </RelativeLayout>
