--- a/app/src/main/res/layout/fragment_main_listadpter.xml
+++ b/app/src/main/res/layout/fragment_main_listadpter.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin_s"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/main_fragment_bg_while">
 
     <TextView
