第一阶段的纯文本完成。

--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/main_fragment_bg_while">
 
     <ListView
         android:id="@+id/collection_list"
@@ -11,4 +12,13 @@
         android:background="@color/transparent"
         android:scrollbarStyle="outsideOverlay" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/collection_list_no_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center_horizontal"
+        android:text="啥也没有\n赶快去收藏吧，喵~"
+        android:visibility="gone"/>
+
+</RelativeLayout>
