--- a/app/src/main/res/layout/fragment_image_list_adapter.xml
+++ b/app/src/main/res/layout/fragment_image_list_adapter.xml
@@ -39,6 +39,7 @@
             android:layout_marginLeft="3dip"
             android:layout_marginRight="3dip"
             />
+
         <TextView
             android:id="@+id/list_tv"
             android:layout_marginTop="10dip"
@@ -48,6 +49,12 @@
             android:textIsSelectable="true"
             android:textSize="17dip"
             />
+        <ImageView
+            android:id="@+id/fragment_list_image_content"
+            android:layout_marginTop="3dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 
 
