--- a/app/src/main/res/layout/fragment_image_list_adapter.xml
+++ b/app/src/main/res/layout/fragment_image_list_adapter.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/item_middle_select_round"
         android:paddingLeft="20dip"
-        android:paddingBottom="10dp"
+        android:paddingBottom="20dp"
         android:paddingTop="10dp"
         android:paddingRight="20dip"
         android:orientation="vertical">
@@ -52,9 +52,24 @@
         <ImageView
             android:id="@+id/fragment_list_image_content"
             android:layout_marginTop="3dip"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"/>
+
+        <TextView
+            android:id="@+id/list_tv_tip"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dip"
+            android:drawableRight="@drawable/imageload_click_image_load_more"
+            android:background="@color/transparent"
+            android:textIsSelectable="true"
+            android:textSize="17dip"
+            android:gravity="center_vertical"
+            android:text="点击，加载更多"
+            android:visibility="gone"
+            />
+
     </LinearLayout>
 
 
@@ -70,6 +85,7 @@
             android:src="@drawable/uncollection_img"
             android:layout_marginLeft="10dip"
             android:layout_centerVertical="true"
+            android:visibility="gone"
             />
 
         <TextView
