--- a/app/src/main/res/layout/fragment_image_list_adapter.xml
+++ b/app/src/main/res/layout/fragment_image_list_adapter.xml
@@ -52,8 +52,9 @@
         <ImageView
             android:id="@+id/fragment_list_image_content"
             android:layout_marginTop="3dip"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
             android:layout_gravity="center_horizontal"/>
 
         <TextView
