--- a/app/src/main/res/layout/fragment_image_load_more_adapter.xml
+++ b/app/src/main/res/layout/fragment_image_load_more_adapter.xml
@@ -16,8 +16,8 @@
         android:id="@+id/fragment_image_more_list_iv"
         android:layout_marginTop="6dip"
         android:layout_marginBottom="6dip"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
