--- a/app/src/main/res/layout/fragment_image_load_more_adapter.xml
+++ b/app/src/main/res/layout/fragment_image_load_more_adapter.xml
@@ -27,6 +27,7 @@
         android:layout_height="300dp"
         fresco:fadeDuration="300"
         android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
         fresco:actualImageScaleType="focusCrop"
         fresco:placeholderImage="@drawable/loadimage_can_loading_error"
         fresco:placeholderImageScaleType="fitCenter"
