--- a/app/src/main/res/layout/fragment_image_load_more.xml
+++ b/app/src/main/res/layout/fragment_image_load_more.xml
@@ -11,10 +11,11 @@
         android:layout_height="wrap_content"
         android:paddingRight="16dip"
         android:drawableLeft="@drawable/loading_iamge_back"
+        android:padding="5dp"
         android:background="@color/bottom_bg_while"
         android:text="返回"
         android:gravity="left|center_vertical"
-        android:textSize="23dip"
+        android:textSize="28dip"
         android:textColor="@color/back_text_color"/>
 
     <ListView
