--- a/app/src/main/res/layout/fragment_image_load_more_adapter.xml
+++ b/app/src/main/res/layout/fragment_image_load_more_adapter.xml
@@ -13,38 +13,38 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
-    <!--<ImageView-->
-        <!--android:id="@+id/fragment_image_more_list_iv"-->
-        <!--android:layout_marginTop="6dip"-->
-        <!--android:layout_marginBottom="6dip"-->
-        <!--android:layout_width="300dp"-->
-        <!--android:layout_height="300dp"-->
-        <!--android:layout_gravity="center_horizontal"/>-->
-
-    <com.facebook.drawee.view.SimpleDraweeView
+    <ImageView
         android:id="@+id/fragment_image_more_list_iv"
+        android:layout_marginTop="6dip"
+        android:layout_marginBottom="6dip"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        fresco:fadeDuration="300"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal"
-        fresco:actualImageScaleType="focusCrop"
-        fresco:placeholderImage="@drawable/loadimage_can_loading_error"
-        fresco:placeholderImageScaleType="fitCenter"
-        fresco:failureImage="@drawable/loadimage_can_loading_error"
-        fresco:failureImageScaleType="centerInside"
-        fresco:retryImageScaleType="centerCrop"
-        fresco:progressBarImageScaleType="centerInside"
-        fresco:progressBarAutoRotateInterval="1000"
-        fresco:backgroundImage="@drawable/loadimage_can_loading_success"
-        fresco:roundAsCircle="false"
-        fresco:roundedCornerRadius="1dp"
-        fresco:roundTopLeft="true"
-        fresco:roundTopRight="true"
-        fresco:roundBottomLeft="true"
-        fresco:roundBottomRight="true"
-        fresco:roundingBorderWidth="2dp"
-        />
+        android:layout_gravity="center_horizontal"/>
+
+    <!-- <com.facebook.drawee.view.SimpleDraweeView
+         android:id="@+id/fragment_image_more_list_iv"
+         android:layout_width="300dp"
+         android:layout_height="300dp"
+         fresco:fadeDuration="300"
+         android:layout_marginTop="10dp"
+         android:layout_gravity="center_horizontal"
+         fresco:actualImageScaleType="focusCrop"
+         fresco:placeholderImage="@drawable/loadimage_can_loading_error"
+         fresco:placeholderImageScaleType="fitCenter"
+         fresco:failureImage="@drawable/loadimage_can_loading_error"
+         fresco:failureImageScaleType="centerInside"
+         fresco:retryImageScaleType="centerCrop"
+         fresco:progressBarImageScaleType="centerInside"
+         fresco:progressBarAutoRotateInterval="1000"
+         fresco:backgroundImage="@drawable/loadimage_can_loading_success"
+         fresco:roundAsCircle="false"
+         fresco:roundedCornerRadius="1dp"
+         fresco:roundTopLeft="true"
+         fresco:roundTopRight="true"
+         fresco:roundBottomLeft="true"
+         fresco:roundBottomRight="true"
+         fresco:roundingBorderWidth="2dp"
+         />-->
 
 
 </LinearLayout>
